classDiagram
    class NavigationController {
        +mapFile(req, reply)
        +search(req, reply)
        +find(req, reply)
        +inspect(req, reply)
    }

    class SearchSymbolUseCase {
        +execute(query)
    }
    class FindSymbolUseCase {
        +execute(id)
    }
    class MapFileUseCase {
        +execute(filePath)
    }
    class InspectCodeUseCase {
        +execute(id, mode)
    }

    class ILspRepository {
        <<interface>>
        +initialize()
        +shutdown()
        +getDocumentSymbols(uri)
        +getWorkspaceSymbols(query)
        +getReferences(uri, position)
        +getDefinition(uri, position)
        +getFoldingRanges(uri)
    }

    class IFileRepository {
        <<interface>>
        +readFile(path)
    }

    class LspRepository {
        +initialize()
        +shutdown()
        +getDocumentSymbols(uri)
        +getWorkspaceSymbols(query)
        +getReferences(uri, position)
        +getDefinition(uri, position)
        +getFoldingRanges(uri)
    }

    class FsRepository {
        +readFile(path)
    }

    class LspProcessManager {
        +start()
        +stop()
        +stdout()
        +stdin()
    }

    NavigationController --> SearchSymbolUseCase
    NavigationController --> FindSymbolUseCase
    NavigationController --> MapFileUseCase
    NavigationController --> InspectCodeUseCase

    SearchSymbolUseCase --> ILspRepository
    FindSymbolUseCase --> ILspRepository
    MapFileUseCase --> ILspRepository
    InspectCodeUseCase --> ILspRepository
    InspectCodeUseCase --> IFileRepository

    LspRepository ..|> ILspRepository
    FsRepository ..|> IFileRepository

    LspRepository --> LspProcessManager
